# geant4sandpit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clang-format.cmake
rutherford/: CMakeLists.txt  drawCylinderSlice.mac  rutherford.cc  scoreBox.mac  scoreCylinder.mac  vis.mac
rutherford/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh
rutherford/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc
